Support multiple modules per POM (#3393)
A Maven 4 module source hierarchy build may declare several Java
modules in one POM; the single-module support from #3345 detected
only the first nested module, scanned only its tests, and decided
classpath-vs-module-path dependency placement with one descriptor,
so the fork died at the Java Modules boot layer when a sibling module
required a dependency that stayed on the classpath.

- findModuleDescriptor() resolves ALL nested module descriptors;
  the primary module (driving scanning and --patch-module) is the
  first one with a nested test output directory, siblings travel as
  additional results in ResolvePathResultWrapper.
- scanDirectories() unions the scan over every nested
  target/test-classes/<module>/ directory.
- The classpath/module-path split is the union over all module
  descriptors: an element required on the module path by ANY module
  goes there, since the fork has a single boot layer.
- The primary module only opens its own test packages; each sibling
  module with tests gets --patch-module, --add-reads and per-package
  --add-opens, passed through the existing
  StartupConfiguration#getJpmsArguments() channel - no change to the
  surefire-booter API or its serialization.

Covered by a unit test for the multi-descriptor detection and the IT
Surefire3393MultiModuleSourceHierarchyIT: two modules in one POM
(com.example.extra requires com.example.core, core requires
transitive jakarta.json to cover the boot-layer failure), whitebox
tests in both modules, five tests in one execution.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>